[gd_scene load_steps=4 format=2]

[ext_resource path="res://Images/UI-elements/Inventory-HUD.png" type="Texture" id=1]
[ext_resource path="res://Inventory-Slot.tscn" type="PackedScene" id=2]
[ext_resource path="res://Inventory.gd" type="Script" id=3]

[node name="Inventory" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 15.0
margin_top = 10.0
margin_right = 828.0
margin_bottom = 138.0
rect_min_size = Vector2( 129, 118 )
custom_constants/vseparation = 15
custom_constants/hseparation = 10
columns = 6

[node name="Inventory-Slot" parent="GridContainer" instance=ExtResource( 2 )]

[node name="Inventory-Slot2" parent="GridContainer" instance=ExtResource( 2 )]
margin_left = 134.0
margin_right = 258.0

[node name="Inventory-Slot3" parent="GridContainer" instance=ExtResource( 2 )]
margin_left = 268.0
margin_right = 392.0

[node name="Inventory-Slot4" parent="GridContainer" instance=ExtResource( 2 )]
margin_left = 402.0
margin_right = 526.0

[node name="Inventory-Slot5" parent="GridContainer" instance=ExtResource( 2 )]
margin_left = 536.0
margin_right = 660.0

[node name="Inventory-Slot6" parent="GridContainer" instance=ExtResource( 2 )]
margin_left = 670.0
margin_right = 794.0

[connection signal="Key_Ready_to_Inv" from="GridContainer/Inventory-Slot" to="." method="_on_InventorySlot_Key_Ready_to_Inv"]
[connection signal="Key_Ready_to_Inv" from="GridContainer/Inventory-Slot2" to="." method="_on_InventorySlot2_Key_Ready_to_Inv"]
[connection signal="Key_Ready_to_Inv" from="GridContainer/Inventory-Slot3" to="." method="_on_InventorySlot3_Key_Ready_to_Inv"]
[connection signal="Key_Ready_to_Inv" from="GridContainer/Inventory-Slot4" to="." method="_on_InventorySlot4_Key_Ready_to_Inv"]
[connection signal="Key_Ready_to_Inv" from="GridContainer/Inventory-Slot5" to="." method="_on_InventorySlot5_Key_Ready_to_Inv"]
